Add Lombok, misc cleanup